--- a/www/template.html
+++ b/www/template.html
@@ -31,7 +31,7 @@
 
           requestAnimationFrame(update);
         })
-        .catch(err => console.log(err));
+        .catch(err => console.error(err));
     </script>
   </body>
 </html>
